@@ -7,7 +7,7 @@ import static dms.pastor.utils.StringUtils.NEW_LINE;
 
 /**
  * Author Dominik Symonowicz
- * WWW:	https://dominiksymonowicz.com/welcome
+ * WWW:	<a href="https://dominiksymonowicz.com/">HOME PAGE</a>
  * IT BLOG:	https://dominiksymonowicz.blogspot.co.uk
  * GitHub:	https://github.com/pastorcmentarny
  * Google Play:	https://play.google.com/store/apps/developer?id=Dominik+Symonowicz
@@ -15,7 +15,7 @@ import static dms.pastor.utils.StringUtils.NEW_LINE;
  */
 public class SimpleDecision implements Decision {
     private final List<Vote> votes;
-    private final Citizen citizen;
+      private final Citizen citizen;
 
     public SimpleDecision(List<Vote> voters, Citizen citizen) {
         this.votes = voters;
@@ -26,7 +26,7 @@ public class SimpleDecision implements Decision {
         final List<String> result = votes.stream()
                 .filter(it -> !it.vote(citizen))
                 .map(Vote::getRejectionReason)
-                .collect(Collectors.toList());
+                .toList();
         StringBuilder stringBuilder = new StringBuilder(citizen.getName());
         stringBuilder.append(" was rejected due:\n");
         result.forEach(reason -> stringBuilder.append(reason).append(NEW_LINE));
